feat: Add layout and animation logic for hero
- Implemented layout and styling for the hero section.
- Files involved: ../public/html/mainSections/hero.html, hero.scss.
- Updated global styles in style.scss to support responsive design for the
hero.
- Integrated dynamic content loading for the hero section using the
loadWrapper function.
- Implemented animation for counters in the hero section via
AnimateCounter class.
- Set up search functionality with PageSearch class for elements marked
with data-search.
- Created a countdown timer to reset daily, updating dynamically in the
DOM.
- Added API-based price synchronization, updating every 15 seconds.
- Ensured modularity by leveraging reusable utility functions and classes.

--- a/index.html
+++ b/index.html
@@ -7,47 +7,7 @@
     <title>Nifter</title>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="header__container">
-          <div class="header__logo logo">
-            <a href="#hero" class="logo__link" data-search>
-              <svg>
-                <use href="/src/assets/svg/sprite.svg#logo"></use>
-              </svg>
-              <span>Nifter</span>
-            </a>
-          </div>
-          <nav class="header__menu menu-header" data-search>
-            <ul class="menu-header__list">
-              <li class="menu-header__item"><a href="#" class="menu-header__link">Home</a></li>
-              <li class="menu-header__item"><a href="#" class="menu-header__link">Market</a></li>
-              <li class="menu-header__item"><a href="#" class="menu-header__link">Discover</a></li>
-              <li class="menu-header__item"><a href="#" class="menu-header__link">Community</a></li>
-              <li class="menu-header__item"><a href="#" class="menu-header__link">Wallet</a></li>
-            </ul>
-          </nav>
-          <form action="/search" class="header__search search">
-            <input
-              type="text"
-              name="search"
-              placeholder="Search"
-              class="search__input"
-              id="search"
-              autocomplete="off" />
-            <button type="button" class="search__button" id="searchBtn">Explore</button>
-          </form>
-        </div>
-      </header>
-      <main class="page" data-search>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, necessitatibus?</p>
-      </main>
-      <footer class="footer">Footer</footer>
-      <div class="navigation" id="navigation">
-        <button class="nanvigation__prev" id="prevBtn">prev</button>
-        <button class="nanvigation__next" id="nextBtn">next</button>
-      </div>
-    </div>
+    <div class="wrapper" id="wrapper"></div>
     <script type="module" src="./src/main.js" defer></script>
   </body>
 </html>
