feat: Add Top Seller block and UI improvements
* Added Top Seller section to HTML structure
* Created comprehensive styles for Top Seller block
* Implemented Top Seller interaction logic:
  * Data loading for slider via dropdown menu
    * Horizontal slider navigation with both mouse controls and
      navigation buttons
      * Enhanced overall site block rendering
      * Refined global styling elements

--- a/src/assets/html/header.html
+++ b/src/assets/html/header.html
@@ -3,7 +3,7 @@
     <div class="header__logo logo">
       <a href="#hero" class="logo__link" data-search>
         <svg>
-          <use href="/src/assets/svg/sprite.svg#logo"></use>
+          <use href="image/svg/sprite.svg#logo"></use>
         </svg>
         <span>Nifter</span>
       </a>
