--- a/src/assets/html/mainSections/hero.html
+++ b/src/assets/html/mainSections/hero.html
@@ -1,7 +1,7 @@
 <section class="page__hero hero">
   <div class="hero__container">
     <div class="hero__content content-hero">
-      <h1 class="content-hero__title">Disсover, collect and sell dope NFTs</h1>
+      <h1 class="content-hero__title title-section">Disсover, collect and sell dope NFTs</h1>
       <p class="content-hero__text">
         The wold largest digital marketplace for crypto collectibles and non-fungible tokens (NFTs)
       </p>
@@ -12,21 +12,21 @@
       <ul class="content-hero__statistic statistic">
         <li class="statistic__item">
           <svg class="statistic__icon">
-            <use href="../../src/assets/svg/sprite.svg#rhombus"></use>
+            <use href="image/svg/sprite.svg#rhombus"></use>
           </svg>
           <p class="statistic__count" id="counterUser">0</p>
           <p class="statistic__subtitle">User Active</p>
         </li>
         <li class="statistic__item">
           <svg class="statistic__icon">
-            <use href="../../src/assets/svg/sprite.svg#rhombus"></use>
+            <use href="image/svg/sprite.svg#rhombus"></use>
           </svg>
           <p class="statistic__count" id="counterWorks">0</p>
           <p class="statistic__subtitle">Artworks</p>
         </li>
         <li class="statistic__item">
           <svg class="statistic__icon">
-            <use href="../../src/assets/svg/sprite.svg#rhombus"></use>
+            <use href="image/svg/sprite.svg#rhombus"></use>
           </svg>
           <p class="statistic__count" id="counterArtist">0</p>
           <p class="statistic__subtitle">Artist</p>
@@ -35,7 +35,7 @@
     </div>
     <div class="hero__nft nft">
       <div class="nft__image">
-        <img src="/public/image/hero_img.png" alt="Nft-image" />
+        <img src="/image/hero_img.png" alt="Nft-image" />
       </div>
       <div class="nft__context">
         <div class="nft__bid">
