feat: Add live-auction block with slider logic
- Add HTML and SCSS for auction block
- Implement JS logic for rendering elements in the slider
- Main slider functionality is in main.js
- Rendering logic moved to auctionApp.js

--- a/src/assets/html/mainSections/top-seller.html
+++ b/src/assets/html/mainSections/top-seller.html
@@ -26,7 +26,7 @@
             <use href="image/svg/sprite.svg#switch"></use>
           </svg>
         </button>
-        <button class="slider__next" type="button" id="seller-next" checked>
+        <button class="slider__next" type="button" id="seller-next">
           <svg>
             <use href="image/svg/sprite.svg#switch"></use>
           </svg>
