feat: Add footer and modal window - Add HTML and SCSS for footer - Add modal window with dynamic content for all links (no logic) - Add styles and basic modal logic

--- a/src/assets/html/header.html
+++ b/src/assets/html/header.html
@@ -2,7 +2,7 @@
   <div class="header__container">
     <div class="header__logo logo">
       <a href="#hero" class="logo__link" data-search>
-        <svg>
+        <svg width="25" height="34">
           <use href="image/svg/sprite.svg#logo"></use>
         </svg>
         <span>Nifter</span>
