feat: Add responsive header and burger menu - Add adaptive styles for the header - Implement burger menu with open/close logic - Add animations for menu appearance and disappearance

--- a/src/assets/html/header.html
+++ b/src/assets/html/header.html
@@ -27,5 +27,17 @@
         autocomplete="off" />
       <button type="button" class="search__button" id="searchBtn">Explore</button>
     </form>
+    <div class="burger-container">
+      <button type="button" class="icon-menu" id="menu-icon">
+        <span></span>
+      </button>
+    </div>
+    <ul class="burger-page" id="burger-page">
+      <li class="burger-page__item"><a href="#" class="burger-page__link">Home</a></li>
+      <li class="burger-page__item"><a href="#" class="burger-page__link">About Us</a></li>
+      <li class="burger-page__item"><a href="#" class="burger-page__link">Service</a></li>
+      <li class="burger-page__item"><a href="#" class="burger-page__link">Pricing</a></li>
+      <li class="burger-page__item"><a href="#" class="burger-page__link">Blog</a></li>
+    </ul>
   </div>
 </header>
