feat: implement responsive design across site components
- Made sections responsive: auction, footer, header, hero, and
  top-seller
- Updated shared styles in style.scss and related files
- Fixed dimension-dependent logic in SellerApp.js

--- a/src/assets/html/mainSections/top-seller.html
+++ b/src/assets/html/mainSections/top-seller.html
@@ -4,7 +4,7 @@
       <h2 class="top-seller__title title-section">Top seller</h2>
       <div class="top-seller__dropdown dropdown">
         <button type="button" class="dropdown__target close" id="dropdown-target">
-          <span id="dropdown-selected">Today</span>
+          <span id="dropdown-selected">Month</span>
           <span class="blur"
             ><svg>
               <use href="image/svg/sprite.svg#sign"></use>
