feat: Add hot-collection block, style, logic
* Created hot-collection component structure
* Added responsive styling with mobile/desktop breakpoints
* Implemented collection display logic using array-based data
* Connected component to main application flow

--- a/src/assets/html/footer.html
+++ b/src/assets/html/footer.html
@@ -17,32 +17,37 @@
         <li class="social-list__item">
           <a href="https://x.com/" target="_blank" class="social-list__link">
             <svg width="24" height="21">
-              <use href="image/svg/sprite.svg#tw"></use></svg
-          ></a>
+              <use href="image/svg/sprite.svg#tw"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-list__item">
           <a href="https://discord.com/" target="_blank" class="social-list__link">
             <svg width="26" height="21">
-              <use href="image/svg/sprite.svg#discord"></use></svg
-          ></a>
+              <use href="image/svg/sprite.svg#discord"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-list__item">
           <a href="https://www.instagram.com/" target="_blank" class="social-list__link">
             <svg width="21" height="21">
-              <use href="image/svg/sprite.svg#inst"></use></svg
-          ></a>
+              <use href="image/svg/sprite.svg#inst"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-list__item">
           <a href="https://vk.com/" target="_blank" class="social-list__link">
             <svg width="29" height="19">
-              <use href="image/svg/sprite.svg#vk"></use></svg
-          ></a>
+              <use href="image/svg/sprite.svg#vk"></use>
+            </svg>
+          </a>
         </li>
         <li class="social-list__item">
           <a href="https://www.facebook.com/" target="_blank" class="social-list__link">
             <svg width="21" height="20">
-              <use href="image/svg/sprite.svg#fb"></use></svg
-          ></a>
+              <use href="image/svg/sprite.svg#fb"></use>
+            </svg>
+          </a>
         </li>
       </ul>
     </div>
