feat: Add workInfo block, style, logic
- Created explore component structure
- Added responsive styling with mobile/desktop breakpoints
- Implemented collection display logic using array-based data

--- a/src/assets/html/mainSections/explore.html
+++ b/src/assets/html/mainSections/explore.html
@@ -9,6 +9,6 @@
       <button class="explore__tab">Watercolor</button>
     </div>
     <ul class="explore__artworks-list artworks-list" id="artworks-container"></ul>
-    <button type="button" class="explore__button">Load More</button>
+    <button type="button" class="explore__button explore__button--some-button">Load More</button>
   </div>
 </section>
