feat: comprehensive update of NFT marketplace structure and functionality
- Reorganized SVG resources structure (removed 15 SVG files)
- Updated HTML components (footer, header, explore, hero, worksInfo, modal)
- Improved JavaScript module logic (HotCollectionApp, SellerApp, explore, modalWindow, pageSearch, workInfo)
- Optimized SCSS styles (auction, explore, style)
- Modified main entry point main.js
- Added new components (subscribe.html, auctionSlider.js, subscribe.js, timerApp.js, subscribe.scss)
- Fixed modal windows functionality for links in SellerApp component

--- a/src/assets/html/mainSections/hero.html
+++ b/src/assets/html/mainSections/hero.html
@@ -1,13 +1,13 @@
 <section class="page__hero hero">
   <div class="hero__container">
     <div class="hero__content content-hero">
-      <h1 class="content-hero__title title-section">Disсover, collect and sell dope NFTs</h1>
+      <h1 class="content-hero__title title-section">Discover, collect and sell dope NFTs</h1>
       <p class="content-hero__text">
         The wold largest digital marketplace for crypto collectibles and non-fungible tokens (NFTs)
       </p>
       <div class="content-hero__group-btn">
-        <button type="button" class="content-hero__button">Explore</button>
-        <button type="button" class="content-hero__button">Create</button>
+        <button type="button" class="content-hero__button" id="#">Explore</button>
+        <button type="button" class="content-hero__button" id="#">Create</button>
       </div>
       <ul class="content-hero__statistic statistic">
         <li class="statistic__item">
@@ -61,8 +61,8 @@
           </ul>
         </div>
         <div class="nft__group-btn">
-          <button type="button" class="nft__button">Bid now</button>
-          <button type="button" class="nft__button">See item</button>
+          <button type="button" class="nft__button" id="#">Bid now</button>
+          <button type="button" class="nft__button" id="#">See item</button>
         </div>
       </div>
     </div>
