--- a/src/assets/html/mainSections/worksInfo.html
+++ b/src/assets/html/mainSections/worksInfo.html
@@ -6,7 +6,7 @@
         Getting started and seling your Nfts.Explore the full process so you dont have any
         cpnfusions.
       </p>
-      <button type="button" class="works-info__button works-info__button--some-button">
+      <button type="button" class="works-info__button works-info__button--some-button" id="#">
         Load More
       </button>
     </div>
