--- a/src/assets/html/footer.html
+++ b/src/assets/html/footer.html
@@ -9,10 +9,7 @@
           <span>Nifter</span>
         </a>
       </div>
-      <p class="footer__text">
-        The worlds largest digital marketplace for crypto collectibities and non tokens (NFTs) Buy,
-        Sell and discover exclusive digital assets
-      </p>
+      <p class="footer__text">The worlds largest digital marketplace for crypto collectibities and non tokens (NFTs) Buy, Sell and discover exclusive digital assets</p>
       <ul class="footer__social social-list">
         <li class="social-list__item">
           <a href="https://x.com/" target="_blank" class="social-list__link">
