--- a/src/assets/html/header.html
+++ b/src/assets/html/header.html
@@ -17,7 +17,7 @@
         <li class="menu-header__item"><a href="#" class="menu-header__link">Wallet</a></li>
       </ul>
     </nav>
-    <form action="/search" class="header__search search">
+    <form action="/search" class="header__search search" onsubmit="return false;">
       <input
         type="text"
         name="search"
@@ -25,7 +25,7 @@
         class="search__input"
         id="search"
         autocomplete="off" />
-      <button type="button" class="search__button" id="searchBtn">Explore</button>
+      <button type="button" class="search__button" id="#">Explore</button>
     </form>
     <div class="burger-container">
       <button type="button" class="icon-menu" id="menu-icon">
