--- a/src/assets/html/mainSections/explore.html
+++ b/src/assets/html/mainSections/explore.html
@@ -9,6 +9,8 @@
       <button class="explore__tab">Watercolor</button>
     </div>
     <ul class="explore__artworks-list artworks-list" id="artworks-container"></ul>
-    <button type="button" class="explore__button explore__button--some-button">Load More</button>
+    <button type="button" class="explore__button explore__button--some-button" id="#">
+      Load More
+    </button>
   </div>
 </section>
