--- a/src/assets/html/modal.html
+++ b/src/assets/html/modal.html
@@ -3,8 +3,8 @@
     <button type="button" class="modal__btn-close" id="btn-close">Close</button>
     <h2 class="modal__title" id="modal-title"></h2>
     <p class="modal__text text" id="modal-text"></p>
-    <div class="modal__img" id="image-modal">
-      <img src="image/error.png" alt="image" />
+    <div class="modal__img">
+      <img src="image/error.png" alt="image" id="image-modal" />
     </div>
   </div>
 </div>
