--- a/src/assets/html/mainSections/hero.html
+++ b/src/assets/html/mainSections/hero.html
@@ -35,7 +35,7 @@
     </div>
     <div class="hero__nft nft">
       <div class="nft__image">
-        <img src="/image/hero_img.png" alt="Nft-image" />
+        <img src="image/hero_img.png" alt="Nft-image" />
       </div>
       <div class="nft__context">
         <div class="nft__bid">
